<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="00:00"
                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/go_name"
                app:layout_constraintTop_toBottomOf="@+id/start_time"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="01.01.1970"
                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                app:layout_constraintLeft_toRightOf="@+id/go_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/go_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_name"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_edit_white_24dp"
                android:clickable="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/delete_go"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444"
                app:srcCompat="@drawable/ic_edit_white_24dp" />

            <ImageView
                android:id="@+id/delete_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_delete_24dp"
                app:srcCompat="@drawable/ic_delete_24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
        android:id="@+id/tabLayout">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Beschreibung" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karte" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_status_fab"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/go128" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_not_going_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/go_status_fab"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toLeftOf="@+id/go_status_fab"
        android:layout_marginRight="8dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_going_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_green_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/go_not_going_fab"
        app:layout_constraintRight_toLeftOf="@+id/go_gone_fab" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/go_gone_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:clickable="true"
        android:visibility="visible"
        app:backgroundTint="@android:color/holo_blue_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/go_status_fab"
        app:layout_constraintRight_toRightOf="@+id/go_status_fab" />

</android.support.constraint.ConstraintLayout>